--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dvsa/azure-logger",
   "version": "0.0.1",
-  "description": "",
+  "description": "Shareable Logging Fascade, implemented with Winston",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
@@ -10,8 +10,9 @@
     "build": "npm run clean && tsc",
     "lint": "eslint --ext .js,.ts ."
   },
-  "author": "",
-  "license": "ISC",
+  "author": "DVSA",
+  "license": "MIT",
+  "repository": "github:dvsa/azure-logger",
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
