--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     // "sourceMap": true,                     /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
     "outDir": "dist",                        /* Redirect output structure to the directory. */
-    // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    "rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "removeComments": true,                /* Do not emit comments to output. */
     // "noEmit": true,                        /* Do not emit outputs. */
@@ -60,6 +60,8 @@
     "migrations",
     "test",
     "coverage",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "__mocks__/**/*", 
+    "babel.config.js"
   ]
 }
