--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@dvsa/azure-logger",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Shareable Logging Facade, implemented with Winston",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
