--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvsa/azure-logger",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Shareable Logging Facade, implemented with Winston",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "winston": "^3.2.1"
+    "winston": "3.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
