--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "applicationinsights": "^1.7.4",
     "dotenv": "^8.2.0",
     "winston": "3.1.0"
   },
