--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "applicationinsights": "^1.7.4",
     "dotenv": "^8.2.0",
-    "winston": "3.1.0"
+    "winston": "3.1.0",
+    "winston-transport": "^4.3.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -38,9 +39,9 @@
       "tsx",
       "js"
     ],
+    "testRegex": "./tests/.*.test.ts$",
     "roots": [
-      "<rootDir>/src"
-    ],
-    "testRegex": "(/__tests__/.*|(\\.|/)(spec))\\.tsx?$"
+      "<rootDir>"
+    ]
   }
 }
