--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "allowJs": true,
     "checkJs": true,
-    "declaration": false,
+    "declaration": true,
     "sourceMap": true,
     "outDir": "dist",
     "rootDir": "./src",
