--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvsa/azure-logger",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Shareable Logging Facade, implemented with Winston",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -30,6 +30,8 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "@opentelemetry/api": "^0.10.2",
+    "@opentelemetry/tracing": "^0.10.2",
     "applicationinsights": "^1.8.5",
     "dotenv": "^8.2.0",
     "winston": "3.1.0",
