FTT-4341: Add Service Bus correlation
+ Correlate between a service bus
+ Log request and dependency telemetry

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
   "overrides": [
     {
       "files": [
-        "**/*.spec.ts"
+        "**/*.test.ts"
       ],
       "rules": {
         "@typescript-eslint/unbound-method": "off",
