--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "postinstall": "npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
     "clean": "rimraf dist",
