--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "postinstall": "npm run build",
+    "publish": "npm run build && npm run test && npm publish --access public",
     "test": "jest",
     "test:watch": "jest --watch",
     "clean": "rimraf dist",
