--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "applicationinsights": "2.1.5",
+    "dotenv": "8.2.0",
     "winston": "3.1.0",
     "winston-transport": "4.4.0"
   },
