--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvsa/azure-logger",
-  "version": "4.2.0",
+  "version": "4.2.1-test",
   "description": "Shareable Logging Facade, implemented with Winston",
   "main": "dist/index.js",
   "scripts": {
@@ -31,7 +31,7 @@
     "typescript": "3.9.7"
   },
   "dependencies": {
-    "applicationinsights": "2.1.8",
+    "applicationinsights": "2.2.0",
     "winston": "3.1.0",
     "winston-transport": "4.4.0"
   },
