--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvsa/azure-logger",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "description": "Shareable Logging Facade, implemented with Winston",
   "main": "dist/index.js",
   "scripts": {
@@ -31,9 +31,10 @@
     "typescript": "3.9.7"
   },
   "dependencies": {
-    "applicationinsights": "2.1.8",
-    "winston": "3.1.0",
-    "winston-transport": "4.4.0"
+    "applicationinsights": "2.2.2",
+    "safe-stable-stringify": "2.3.1",
+    "winston": "3.6.0",
+    "winston-transport": "4.5.0"
   },
   "jest": {
     "moduleFileExtensions": [
