--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvsa/azure-logger",
-  "version": "5.0.0",
+  "version": "5.2.0-test6",
   "description": "Shareable Logging Facade, implemented with Winston",
   "main": "dist/index.js",
   "scripts": {
@@ -26,14 +26,14 @@
     "@types/uuid": "8.3.0",
     "babel-jest": "25.5.1",
     "eslint": "6.8.0",
-    "jest": "25.5.4",
+    "jest": "^28.0.3",
     "rimraf": "3.0.2",
     "typescript": "3.9.7"
   },
   "dependencies": {
-    "applicationinsights": "2.1.8",
-    "winston": "3.1.0",
-    "winston-transport": "4.4.0"
+    "applicationinsights": "2.3.2",
+    "winston": "3.7.2",
+    "winston-transport": "4.5.0"
   },
   "jest": {
     "moduleFileExtensions": [
