Feature/ftt 17108 enable user flows (#60)
* FTT-17108 6.2.1-rc6

* FTT-17108 remove unnecessary tags

* FTT-17108 user account

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvsa/azure-logger",
-  "version": "6.2.0",
+  "version": "6.3.0",
   "description": "Shareable Logging Facade, implemented with Winston",
   "main": "dist/index.js",
   "scripts": {
@@ -10,7 +10,8 @@
     "test:watch": "jest --watch",
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
-    "lint": "eslint --ext .js,.ts ."
+    "lint": "eslint --ext .js,.ts .",
+    "lint:fix": "eslint --fix --ext .js,.ts ."
   },
   "author": "DVSA",
   "license": "MIT",
