--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvsa/azure-logger",
-  "version": "6.5.0",
+  "version": "7.0.4-BETA",
   "description": "Shareable Logging Facade, implemented with Winston",
   "main": "dist/index.js",
   "scripts": {
@@ -17,24 +17,35 @@
   "license": "MIT",
   "repository": "github:dvsa/azure-logger",
   "devDependencies": {
-    "@azure/functions": "1.2.3",
-    "@babel/core": "7.11.6",
-    "@babel/preset-env": "7.11.5",
-    "@babel/preset-typescript": "7.10.4",
-    "@dvsa/eslint-config-ts": "1.0.1",
+    "@babel/core": "7.25.9",
+    "@babel/preset-env": "7.25.9",
+    "@babel/preset-typescript": "7.25.9",
+    "@dvsa/eslint-config-ts": "3.0.1",
     "@types/jest": "25.2.3",
-    "@types/node": "13.13.21",
+    "@types/node": "18.15.3",
     "@types/uuid": "8.3.0",
-    "babel-jest": "25.5.1",
-    "eslint": "6.8.0",
+    "babel-jest": "29.7.0",
     "jest": "28.0.3",
     "rimraf": "3.0.2",
-    "typescript": "3.9.7"
+    "typescript": "4.5.4"
   },
   "dependencies": {
+    "@azure/functions": "4.5.0",
     "applicationinsights": "2.9.4",
     "winston": "3.7.2",
     "winston-transport": "4.5.0"
+  },
+  "overrides": {
+    "@protobufjs/utf8": "1.0.7",
+    "@protobufjs/aspromise": "1.1.1",
+    "@protobufjs/base64": "1.1.1",
+    "@protobufjs/codegen": "2.0.3",
+    "@protobufjs/eventemitter": "1.0.5",
+    "@protobufjs/fetch": "1.0.4",
+    "@protobufjs/float": "1.0.1",
+    "@protobufjs/inquire": "1.0.2",
+    "@protobufjs/path": "1.1.1",
+    "@protobufjs/pool": "1.0.5"
   },
   "jest": {
     "moduleFileExtensions": [
